--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -8,10 +8,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btn_add_to_shopping_list"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -61,7 +60,6 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <!-- RecyclerView limité en hauteur -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/ingredientsRecyclerview"
                 android:layout_width="match_parent"
@@ -69,7 +67,7 @@
                 android:layout_marginTop="8dp" />
 
             <TextView
-                android:id="@+id/instructions"
+                android:id="@+id/instructionsTitre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -77,18 +75,14 @@
                 android:textAlignment="center"
                 android:textSize="20sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/instructions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Instructions de la recette" />
         </LinearLayout>
     </ScrollView>
 
-    <!-- Bouton en bas à gauche -->
-    <Button
-        android:id="@+id/btn_add_to_shopping_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ajouter à la liste"
-        android:layout_margin="16dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
