--- a/app/src/main/res/layout/activity_liste_de_course.xml
+++ b/app/src/main/res/layout/activity_liste_de_course.xml
@@ -9,10 +9,18 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewShoppingList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_modify_list"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/item_shopping_list" />
+
+    <Button
+        android:id="@+id/btn_modify_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Modifier la liste"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
