--- a/app/src/main/res/layout/activity_liste_de_course.xml
+++ b/app/src/main/res/layout/activity_liste_de_course.xml
@@ -23,4 +23,12 @@
         android:text="Modifier la liste"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <Button
+        android:id="@+id/btn_delete_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Supprimer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
