--- a/app/src/main/res/layout/activity_modify_list.xml
+++ b/app/src/main/res/layout/activity_modify_list.xml
@@ -11,13 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btn_modify_list"
+        app:layout_constraintBottom_toTopOf="@id/btn_save_list"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/item_modify_shopping_list" />
 
     <Button
-        android:id="@+id/btn_modify_list"
+        android:id="@+id/btn_save_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sauvegarder"
