--- a/app/src/main/res/layout/item_modify_shopping_list.xml
+++ b/app/src/main/res/layout/item_modify_shopping_list.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal"
     android:padding="16dp">
 
-    <EditText
+    <TextView
         android:id="@+id/tvIngredientName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -21,7 +21,7 @@
         android:textAlignment="center"
         android:textSize="16sp" />
 
-    <EditText
+    <TextView
         android:id="@+id/tvIngredientUnite"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
